# log-context-mcp

./: .claude.md  .gitignore  README.md  analyzer.py  preprocessor.py  pylint_output.txt  pyproject.toml  server.py
.claude/agents/: log-analyzer.md
.github/workflows/: publish.yml  pylint.yml  tests.yml
log_context_mcp/: __init__.py  analyzer.py  preprocessor.py  server.py
scripts/: gen_log.py  setup.sh
skills/: analyze-log.md
tests/: __init__.py  test_log_context.py
