[project]
name = "log-context-mcp"
version = "0.1.0"
description = "Token-efficient log preprocessing MCP server for LLM coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
log-context-mcp = "server:mcp.run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
